--- a/home3.html
+++ b/home3.html
@@ -129,134 +129,80 @@
             color: #eee;
         }
 
-        /* 模型切换 tab（与主站一致） */
-        .topbar {
-            position: relative;
-            background: transparent;
-            padding: 16px 18px;
-            z-index: 10;
+        /* 聊天框 + 展开的候选框（一体） */
+        .search-wrap {
             width: 100%;
-            margin-top: 10px;
-        }
-        .topbar-inner {
-            max-width: min(820px, calc(100vw - 80px));
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .pillbar {
-            background: rgba(255, 255, 255, 0.72);
-            border: 1px solid rgba(79, 172, 254, 0.55);
-            border-radius: 999px;
+            max-width: 650px;
+            margin-top: 30px;
+            position: relative;
+            background: rgba(255, 255, 255, 0.98);
+            border: 1px solid rgba(79, 172, 254, 0.3);
+            border-radius: 24px;
+            box-shadow: 0 15px 45px rgba(0, 0, 0, 0.1);
             backdrop-filter: blur(10px);
-            padding: 6px;
-            display: flex;
-            gap: 6px;
-            max-width: 100%;
-            overflow-x: auto;
-            overflow-y: hidden;
-            scrollbar-width: none;
-            scroll-behavior: smooth;
-            transition: box-shadow 0.2s;
+            overflow: hidden;
         }
-        .pillbar::-webkit-scrollbar { display: none; }
-        .pill {
-            white-space: nowrap;
+        .search-wrap .chat-input-container {
+            margin-top: 0;
+            margin-bottom: 0;
+            border: none;
+            border-radius: 0;
+            box-shadow: none;
+            background: transparent;
+            padding: 6px 6px 6px 20px;
+        }
+        .input-suggestions {
+            display: none;
+            margin: 0;
+            padding: 0 0 6px 0;
+            background: transparent;
+            border: none;
+            border-top: 1px solid rgba(0, 0, 0, 0.06);
+            border-radius: 0;
+            box-shadow: none;
+        }
+        .input-suggestions.show {
+            display: block;
+        }
+        .suggest-item {
             display: flex;
             align-items: center;
-            gap: 8px;
-            padding: 10px 14px;
-            border-radius: 999px;
-            border: 1px solid transparent;
-            cursor: pointer;
-            font-weight: 600;
-            color: #6b7280;
+            gap: 12px;
+            width: 100%;
+            padding: 12px 16px;
+            border: none;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.06);
             background: transparent;
-            user-select: none;
-            transition: all 0.2s;
-        }
-        .pill:hover {
-            background: #f6f7fb;
             color: #111827;
+            font-weight: 500;
+            font-size: 15px;
+            text-decoration: none;
+            cursor: pointer;
+            transition: background 0.15s;
+            text-align: left;
+            box-sizing: border-box;
         }
-        .pill:active { transform: scale(0.95); }
-        .pill.active {
-            background: linear-gradient(135deg, #0ea5e9, #2563eb);
-            color: #fff;
-            transform: scale(1.02);
+        .suggest-item:last-child {
+            border-bottom: none;
         }
-        .pill.active:active { transform: scale(0.98); }
-        .pill .dot {
-            width: 18px;
-            height: 18px;
+        .suggest-item:hover {
+            background: rgba(79, 172, 254, 0.08);
+        }
+        .suggest-item .suggest-icon {
+            width: 24px;
+            height: 24px;
             border-radius: 6px;
-            background: rgba(0, 0, 0, .08);
-            display: inline-grid;
-            place-items: center;
-            color: inherit;
-            transition: background 0.2s;
+            object-fit: cover;
+            border: 1px solid #e5e7eb;
+            flex-shrink: 0;
         }
-        .pill .dot img {
-            border: 1px solid #ccc;
-            border-radius: 6px;
-        }
-        .pill.active .dot { background: rgba(255, 255, 255, .22); }
-        .pill .dot.pill-dots {
-            font-size: 14px;
+        .suggest-item .suggest-dots {
+            width: 24px;
+            flex-shrink: 0;
+            font-size: 16px;
             font-weight: 700;
             letter-spacing: 1px;
             line-height: 1;
-        }
-        .model-pop {
-            position: fixed;
-            display: none;
-            min-width: 240px;
-            max-width: min(360px, 92vw);
-            max-height: min(360px, 70vh);
-            flex-direction: column;
-            overflow: hidden;
-            background: #fff;
-            border: 1px solid #e5e7eb;
-            border-radius: 16px;
-            box-shadow: 0 20px 45px rgba(15, 23, 42, 0.2);
-            opacity: 0;
-            transform: translateY(6px) scale(0.98);
-            transition: opacity 0.18s ease, transform 0.18s ease;
-            pointer-events: none;
-            z-index: 60;
-        }
-        .model-pop.show {
-            display: flex;
-            opacity: 1;
-            transform: translateY(0) scale(1);
-            pointer-events: auto;
-        }
-        .model-pop-list {
-            padding: 10px;
-            display: grid;
-            gap: 8px;
-            overflow-y: auto;
-        }
-        .model-pop-item {
-            border: 1px solid transparent;
-            background: #f9fafb;
-            color: #111827;
-            border-radius: 12px;
-            padding: 9px 12px;
-            text-align: left;
-            font-size: 14px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
-        }
-        .model-pop-item:hover {
-            background: #f3f4f6;
-            transform: translateY(-1px);
-        }
-        .model-pop-item.active {
-            background: linear-gradient(135deg, #0ea5e9, #2563eb);
-            color: #fff;
         }
 
         /* 滚动动画 */
@@ -275,7 +221,7 @@
         .row-right .marquee-content { animation: scrollRight 160s linear infinite; }
 
 
-        /* 输入框容器适配 */
+        /* 输入框容器（在 .search-wrap 内无边框，由 wrap 统一描边） */
         .chat-input-container {
             margin-top: 30px;
             display: flex;
@@ -368,17 +314,22 @@
                 <span>超高性价比</span>
             </div>
 
-            <div class="topbar">
-                <div class="topbar-inner">
-                    <div class="pillbar" id="model-pillbar" role="tablist" aria-label="模型切换"></div>
-                </div>
-            </div>
         </div>
 
-
-        <div class="chat-input-container">
-            <input type="text" id="chatInput" placeholder="输入你想对话的 AI 模型或问题...">
-            <a href="https://topglobai.com/panel/playground" target="_top" class="btn-chat">立即对话</a>
+        <div class="search-wrap">
+            <div class="chat-input-container">
+                <input type="text" id="chatInput" placeholder="输入你想对话的 AI 模型或问题...">
+                <a href="https://topglobai.com/panel/playground" target="_top" class="btn-chat">立即对话</a>
+            </div>
+            <div class="input-suggestions" id="inputSuggestions" aria-label="选择 AI">
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><img class="suggest-icon" src="https://img.topglobai.com/allaiimg/img-006.jpeg" alt="">GPT</a>
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><img class="suggest-icon" src="https://img.topglobai.com/allaiimg/img-012.jpeg" alt="">DeepSeek</a>
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><img class="suggest-icon" src="https://img.topglobai.com/allaiimg/img-009.jpeg" alt="">Gemini</a>
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><img class="suggest-icon" src="https://img.topglobai.com/allaiimg/img-002.jpeg" alt="">Claude</a>
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><img class="suggest-icon" src="https://img.topglobai.com/allaiimg/img-025.jpeg" alt="">Kimi</a>
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><img class="suggest-icon" src="https://img.topglobai.com/allaiimg/img-042.jpeg" alt="">Flux</a>
+                <a href="https://topglobai.com/panel/" target="_top" class="suggest-item"><span class="suggest-dots">⋯</span>更多</a>
+            </div>
         </div>
     </div>
 
@@ -387,132 +338,25 @@
         const textEl = document.getElementById('typewriter');
         const sleep = (ms) => new Promise(resolve => setTimeout(resolve, ms));
 
-        // 模型切换 tab 数据（与主站 index 一致）
-        const IMG_BASE = "https://img.topglobai.com/allaiimg/";
-        const MODEL_GROUPS = [
-            { key: "gpt", label: "GPT", icon: IMG_BASE + "img-006.jpeg", models: ["gpt-5.2", "gpt-5.1", "gpt-5", "o3-pro", "o3", "o1-pro", "o1", "gpt-4.1", "gpt-4", "chatgpt-4o-latest", "gpt-3.5-turbo-raw"] },
-            { key: "deepseek", label: "DeepSeek", icon: IMG_BASE + "img-012.jpeg", models: ["deepseek-r1", "deepseek-v3.2", "deepseek-v3.1", "deepseek-v3"] },
-            { key: "gemini", label: "Gemini", icon: IMG_BASE + "img-009.jpeg", models: ["gemini-3-pro", "gemini-3-flash", "gemini-2.5-flash", "gemini-2.0-flash"] },
-            { key: "claude", label: "Claude", icon: IMG_BASE + "img-002.jpeg", models: ["claude-haiku-4.5", "claude-opus-4.5", "claude-opus-4.1", "claude-opus-4", "claude-sonnet-3.5", "claude-haiku-3"] },
-            { key: "kimi", label: "Kimi", icon: IMG_BASE + "img-025.jpeg", models: ["kimi-k2", "kimi-k2-0905-t", "kimi-k2-instruct", "kimi-k2-t", "kimi-k2-think-t", "kimi-k2-thinking"] },
-            { key: "flux", label: "Flux", icon: IMG_BASE + "img-042.jpeg", models: ["flux-2-flash", "flux-2-max", "flux-2-pro", "flux-2-turbo", "flux-fill", "flux-pro-1.1"] }
-        ];
-        const ALL_PILL = { key: "all", label: "全部", dots: true };
-
-        const pillbarEl = document.getElementById("model-pillbar");
-        let modelPopEl = null;
-        let modelPopList = null;
-        let hoverCloseTimer = null;
-        let lastPillPointerType = "mouse";
-        let activeGroupKey = "gpt";
-
-        function setActivePill(key) {
-            activeGroupKey = key || "";
-            document.querySelectorAll("#model-pillbar .pill[data-model]").forEach(function(pill) {
-                const isActive = (pill.dataset.model || "") === activeGroupKey;
-                pill.classList.toggle("active", isActive);
-                pill.setAttribute("aria-selected", isActive ? "true" : "false");
+        // 输入框聚焦时显示待选，失焦后延迟隐藏（便于点击链接）
+        (function() {
+            var input = document.getElementById("chatInput");
+            var panel = document.getElementById("inputSuggestions");
+            var hideTimer = null;
+            if (!input || !panel) return;
+            function show() {
+                clearTimeout(hideTimer);
+                panel.classList.add("show");
+            }
+            function hide() {
+                hideTimer = setTimeout(function() { panel.classList.remove("show"); }, 150);
+            }
+            input.addEventListener("focus", show);
+            input.addEventListener("blur", hide);
+            document.addEventListener("keydown", function(e) {
+                if (e.key === "Escape" && panel.classList.contains("show")) { panel.classList.remove("show"); input.blur(); }
             });
-        }
-
-        function ensureModelPop() {
-            if (modelPopEl) return modelPopEl;
-            modelPopEl = document.createElement("div");
-            modelPopEl.className = "model-pop";
-            modelPopEl.setAttribute("aria-hidden", "true");
-            modelPopEl.setAttribute("role", "dialog");
-            modelPopEl.setAttribute("aria-label", "模型选择");
-            modelPopEl.innerHTML = '<div class="model-pop-list" role="listbox" aria-label="模型列表"></div>';
-            document.body.appendChild(modelPopEl);
-            modelPopList = modelPopEl.querySelector(".model-pop-list");
-            modelPopEl.addEventListener("pointerenter", function() { clearTimeout(hoverCloseTimer); hoverCloseTimer = null; });
-            modelPopEl.addEventListener("pointerleave", function() { hoverCloseTimer = setTimeout(closeModelPop, 120); });
-            return modelPopEl;
-        }
-
-        function renderModelPopList(group) {
-            if (!modelPopList || !group) return;
-            modelPopList.innerHTML = "";
-            group.models.forEach(function(modelId) {
-                var item = document.createElement("button");
-                item.type = "button";
-                item.className = "model-pop-item";
-                item.textContent = modelId;
-                item.dataset.model = modelId;
-                item.addEventListener("click", function(e) { e.stopPropagation(); setActivePill(group.key); closeModelPop(); });
-                modelPopList.appendChild(item);
-            });
-        }
-
-        function positionModelPop(anchorEl) {
-            if (!modelPopEl || !anchorEl) return;
-            var rect = anchorEl.getBoundingClientRect();
-            var cardW = 280;
-            var cardH = 240;
-            var left = Math.max(8, Math.min(rect.left + rect.width / 2 - cardW / 2, window.innerWidth - cardW - 8));
-            var top = rect.bottom + 10;
-            if (top + cardH > window.innerHeight - 10) top = rect.top - cardH - 10;
-            modelPopEl.style.left = left + "px";
-            modelPopEl.style.top = Math.max(8, top) + "px";
-            modelPopEl.style.visibility = "visible";
-        }
-
-        function openModelPop(group, anchorEl) {
-            if (!group) return;
-            ensureModelPop();
-            renderModelPopList(group);
-            modelPopEl.classList.add("show");
-            modelPopEl.setAttribute("aria-hidden", "false");
-            setActivePill(group.key);
-            modelPopEl.style.visibility = "hidden";
-            modelPopEl.style.left = "0";
-            modelPopEl.style.top = "0";
-            positionModelPop(anchorEl);
-        }
-
-        function closeModelPop() {
-            if (!modelPopEl) return;
-            modelPopEl.classList.remove("show");
-            modelPopEl.setAttribute("aria-hidden", "true");
-            setActivePill(activeGroupKey);
-        }
-
-        if (pillbarEl) {
-            MODEL_GROUPS.forEach(function(group) {
-                var pill = document.createElement("div");
-                pill.className = "pill";
-                pill.dataset.model = group.key;
-                pill.setAttribute("role", "tab");
-                pill.setAttribute("aria-selected", group.key === "gpt" ? "true" : "false");
-                if (group.key === "gpt") pill.classList.add("active");
-                var isDirectPick = group.models && group.models.length === 1;
-                pill.innerHTML = '<span class="dot"><img src="' + group.icon + '" width="18" alt="" /></span>' + group.label;
-                pill.addEventListener("pointerenter", function(e) {
-                    if (e.pointerType && e.pointerType !== "mouse") return;
-                    clearTimeout(hoverCloseTimer);
-                    if (!isDirectPick) openModelPop(group, pill);
-                });
-                pill.addEventListener("pointerleave", function(e) {
-                    if (e.pointerType && e.pointerType !== "mouse") return;
-                    if (!isDirectPick) hoverCloseTimer = setTimeout(closeModelPop, 120);
-                });
-                pill.addEventListener("pointerdown", function(e) { if (e.pointerType) lastPillPointerType = e.pointerType; });
-                pill.addEventListener("click", function(e) {
-                    e.preventDefault();
-                    if (isDirectPick) { setActivePill(group.key); closeModelPop(); return; }
-                    if (lastPillPointerType === "mouse") return;
-                    openModelPop(group, pill);
-                });
-                pillbarEl.appendChild(pill);
-            });
-            var allPill = document.createElement("div");
-            allPill.className = "pill pill-all";
-            allPill.setAttribute("role", "button");
-            allPill.innerHTML = '<span class="dot pill-dots">⋯</span>' + ALL_PILL.label;
-            allPill.addEventListener("click", function(e) { e.preventDefault(); window.location.href = "https://topglobai.com/panel/playground"; });
-            pillbarEl.appendChild(allPill);
-        }
-        document.addEventListener("keydown", function(e) { if (e.key === "Escape" && modelPopEl && modelPopEl.classList.contains("show")) closeModelPop(); });
+        })();
 
         async function runBrandAnimation() {
             await sleep(800);
