--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@
               </span>
               新建绘图
             </div>
+            <div class="side-item" data-prompt="video">
+              <span class="ico" style="color: #8b5cf6">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="m22 8-6 4 6 4V8Z"/>
+                  <rect width="14" height="12" x="2" y="6" rx="2" ry="2"/>
+                </svg>
+              </span>
+              创作视频
+            </div>
           </div>
 
           <div class="divider"></div>
