--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>聊天</title>
+    <script>
+      (function(){var t=localStorage.getItem('theme');if(t==='dark')document.documentElement.setAttribute('data-theme','dark');})();
+    </script>
     <link rel="stylesheet" href="css/base.css?v=105" />
     <link rel="stylesheet" href="css/sidebar.css?v=105" />
     <link rel="stylesheet" href="css/main.css?v=105" />
@@ -18,7 +21,9 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css"
+      id="hljs-style"
     />
+    <link rel="stylesheet" href="css/theme-dark.css?v=105" />
   </head>
 
   <body>
@@ -172,8 +177,8 @@
                 <path d="M21 16v2a4 4 0 0 1-4 4h-5"/>
               </svg>
             </div>
-            <div class="mini" title="日间模式" onclick="window.open('https:\/\/topglobai.com');">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#6b7280" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-sun-icon lucide-sun">
+            <div class="mini" id="themeToggle" title="切换日间/夜间模式" role="button" aria-label="切换主题">
+              <svg class="theme-icon theme-icon-sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round">
                 <circle cx="12" cy="12" r="4"/>
                 <path d="M12 2v2"/>
                 <path d="M12 20v2"/>
@@ -183,6 +188,9 @@
                 <path d="M20 12h2"/>
                 <path d="m6.34 17.66-1.41 1.41"/>
                 <path d="m19.07 4.93-1.41 1.41"/>
+              </svg>
+              <svg class="theme-icon theme-icon-moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
               </svg>
             </div>
             <div class="mini" title="我" onclick="window.open('https:\/\/topglobai.com');">
