--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="logo">
                 <img
                   src="https://img.topglobai.com/logomain.png"
-                  style="width: 50%"
+                  alt="Logo"
                 />
               </div>
             </div>
@@ -197,13 +197,13 @@
                 <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"/>
               </svg>
             </div>
-            <div class="mini" title="我" onclick="window.open('https:\/\/topglobai.com');">
+            <a class="mini" href="https://topglobai.com/panel" target="_blank" rel="noopener" title="我">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#6b7280" stroke-width="1.75" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user-icon lucide-circle-user">
                 <circle cx="12" cy="12" r="10"/>
                 <circle cx="12" cy="10" r="3"/>
                 <path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/>
               </svg>
-            </div>
+            </a>
           </div>
         </div>
       </aside>
