--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="noindex, nofollow" />
-  <title>页面</title>
+  <title>管理员</title>
   <style>
     * { box-sizing: border-box; }
     body { font-family: system-ui, -apple-system, sans-serif; margin: 0; padding: 16px; background: #0f0f0f; color: #e0e0e0; min-height: 100vh; }
