--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="brand-left">
               <div class="logo">
                 <img
-                  src="https://img.topglobai.com/logomain.png"
+                  src="https://img.topglobai.com/logomain2.png"
                   alt="Logo"
                 />
               </div>
